--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             "         });"+"\n"+
             "      }"+"\n"+
         "        } "+"\n"+"```"],
-            ["IMAGE",2 , str, str, "bbjsxl", "## 图片示例\n![](https://icdn.amarea.cn/upload/2022/08/630f111a1e88c.png)"]
+            ["IMAGE",2 , str, str, "bbjsxl", "## 图片示例\n![](https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F8%2F549cf5201acb9.jpg&refer=http%3A%2F%2Fpic1.win4000.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1667649968&t=1928b1af53e3e8e5fedfa6c73e341f98)"]
         ]
 
         for(let i=0;i<noteArr.length;i++) {
